--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,25 @@
 backup/index.css
 backup/index.html
 backup/index.js
+scroll/backup/index.html
+scroll/backup/scroll.css
+scroll/backup/scroll.js
+scroll/backup/images/android.svg
+scroll/backup/images/logogoogle.png
+scroll/backup/images/regua.png
+scroll/backup/images/phones/01.png
+scroll/backup/images/phones/02.png
+scroll/backup/images/phones/03.png
+scroll/backup/images/phones/04.png
+scroll/backup/images/phones/05.png
+scroll/backup/images/phones/06.png
+scroll/backup/images/phones/07.png
+scroll/backup/images/phones/08.png
+scroll/backup/images/phones/09.png
+scroll/backup/images/phones/10.png
+scroll/backup/images/phones/11.png
+scroll/backup/images/phones/12.png
+scroll/backup/images/phones/13.png
+scroll/backup/images/phones/14.png
+scroll/backup/images/phones/15.png
+scroll/backup/images/phones/16.png
