--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,7 @@ scroll/backup/images/phones/13.png
 scroll/backup/images/phones/14.png
 scroll/backup/images/phones/15.png
 scroll/backup/images/phones/16.png
+calc/experimentos/2.html
+calc/experimentos/1833-3.gif
+calc/experimentos/app2.css
+calc/experimentos/app2.js
