--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ calc/experimentos/2.html
 calc/experimentos/1833-3.gif
 calc/experimentos/app2.css
 calc/experimentos/app2.js
+calc/backup-index.html
