--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@ calc/experimentos/1833-3.gif
 calc/experimentos/app2.css
 calc/experimentos/app2.js
 calc/backup-index.html
+calc/images/fundoanimado.html
