--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,22 @@ calc/experimentos/app2.css
 calc/experimentos/app2.js
 calc/backup-index.html
 calc/images/fundoanimado.html
+calc/images/1883-1.gif
+calc/images/1883-2.gif
+calc/images/1883-3.webp
+calc/images/1883-4.webp
+calc/images/1883-5.gif
+calc/images/app2.css
+calc/images/app2.js
+exp/app2.css
+exp/backup-app.js
+exp/index2.html
+exp/titulo.gif
+exp/images/1883-1.gif
+exp/images/1883-2.gif
+exp/images/1883-3.webp
+exp/images/1883-4.webp
+exp/images/1883-5.gif
+exp/images/app2.css
+exp/images/app2.js
+exp/images/fundoanimado.html
