--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-backup/index.css
-backup/index.html
-backup/index.js
 scroll/backup/index.html
 scroll/backup/scroll.css
 scroll/backup/scroll.js
@@ -23,19 +20,6 @@ scroll/backup/images/phones/13.png
 scroll/backup/images/phones/14.png
 scroll/backup/images/phones/15.png
 scroll/backup/images/phones/16.png
-calc/experimentos/2.html
-calc/experimentos/1833-3.gif
-calc/experimentos/app2.css
-calc/experimentos/app2.js
-calc/backup-index.html
-calc/images/fundoanimado.html
-calc/images/1883-1.gif
-calc/images/1883-2.gif
-calc/images/1883-3.webp
-calc/images/1883-4.webp
-calc/images/1883-5.gif
-calc/images/app2.css
-calc/images/app2.js
 exp/app2.css
 exp/backup-app.js
 exp/index2.html
@@ -48,8 +32,12 @@ exp/images/1883-5.gif
 exp/images/app2.css
 exp/images/app2.js
 exp/images/fundoanimado.html
-calc/exp/app2.js
-backup/guardar.js
-.vscode/settings.json
+calc/exp/css/app2.css
 calc/exp/js/app2.js
 calc/exp/index2.html
+backup/guardar.js
+backup/index.css
+backup/index.html
+backup/index.js
+.vscode/launch.json
+.vscode/settings.json
