--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,15 +2,21 @@
     "configurations": [
         {
             "type": "pwa-msedge",
-            "name": "http://127.0.0.1:3000/calc/exp/index2.html",
+            "name": "Calc 2",
             "request": "launch",
             "url": "http://127.0.0.1:3000/calc/exp/index2.html"
         },
         {
             "type": "pwa-msedge",
-            "name": "http://127.0.0.1:3000/calc/exp/index.html",
+            "name": "Calc 1",
             "request": "launch",
             "url": "http://127.0.0.1:3000/calc/exp/index.html"
+        }
+        {
+            "type": "pwa-msedge",
+            "name": "Mapa",
+            "request": "launch",
+            "url": "http://127.0.0.1:3000/mapa/index.html"
         }
     ]
 }
