--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,5 @@ backup/index.html
 backup/index.js
 .vscode/launch.json
 .vscode/settings.json
+mapa/dados/tode_casamentolgbt_regioes.ipynb
+mapa/dados/lgbt_casamento.csv
