--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,4 @@ backup/index.js
 .vscode/settings.json
 mapa/dados/tode_casamentolgbt_regioes.ipynb
 mapa/dados/lgbt_casamento.csv
+mapa/dados/casamentosporano.json
