--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,10 @@ backup/index.js
 mapa/dados/tode_casamentolgbt_regioes.ipynb
 mapa/dados/lgbt_casamento.csv
 mapa/dados/casamentosporano.json
+mapa/dados/tode_casamentolgbt_regioes_back.ipynb
+mapa/dados/casamento.csv
+mapa/dados/casamentos.ipynb
+mapa/dados/casamentos.json
+mapa/dados/pop.csv
+mapa/dados/pop20.csv
+mapa/dados/populacao.csv
