--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,6 @@ mapa/dados/casamentos.json
 mapa/dados/pop.csv
 mapa/dados/pop20.csv
 mapa/dados/populacao.csv
+mapa/dados/casamento-backup.csv
+mapa/dados/casamentosporestado.json
+mapa/dados/pormesestado.json
