Posicionamento de elementos

--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,4 @@ mapa/dados/casamento-backup.csv
 mapa/dados/casamentosporestado.json
 mapa/dados/pormesestado.json
 mapa/dados/casamentos-backup.ipynb
+mapa/dados/casamentos-json.csv
